Добавил метод "Create_Books_Name"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Books_0_00_1</string>
+    <string name="app_name">Books world</string>
     <string name="et_Email">E-mail</string>
     <string name="et_Password">Password</string>
     <string name="button_in">Регистрация</string>
